CAMBIO A COLECCION PRODUCTO

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <script>
     let shoes = [];
     let currentIndex = null;
-    const dbCollection = db.collection("Zapatos123");
+    const dbCollection = db.collection("producto");
 
     async function saveShoe() {
         const shoeForm = document.forms.shoeForm;
