--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logueo</title>
+    <title>Login</title>
     <style>
         body {
             display: flex;
@@ -50,17 +50,35 @@
     </form>
 </div>
 
+<script src="https://www.gstatic.com/firebasejs/9.9.3/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.9.3/firebase-auth-compat.js"></script>
 <script>
+    const firebaseConfig = {
+        apiKey: "AIzaSyBtbwtEV54UibTbNI2rLS08xhiR0CquMC0",
+        authDomain: "licoreria-c33d4.firebaseapp.com",
+        projectId: "licoreria-c33d4",
+        storageBucket: "licoreria-c33d4.appspot.com",
+        messagingSenderId: "236261862007",
+        appId: "1:236261862007:web:78f96318a93f483b92b472",
+        measurementId: "G-BW9GSQNXW6"
+    };
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+
     document.getElementById('loginForm').addEventListener('submit', function(event) {
         event.preventDefault();
         const username = document.getElementById('username').value;
         const password = document.getElementById('password').value;
-        
-        if (username === 'admin' && password === '123') {
-            window.location.href = 'index.html';
-        } else {
-            alert('Usuario o contraseña incorrectos');
-        }
+
+        auth.signInWithEmailAndPassword(username, password)
+            .then((userCredential) => {
+                // Redirigir al usuario a index.html si el login es exitoso
+                window.location.href = 'index.html';
+            })
+            .catch((error) => {
+                alert('Usuario o contraseña incorrectos');
+                console.error(error.code, error.message);
+            });
     });
 </script>
 
