--- a/index.html
+++ b/index.html
@@ -80,17 +80,121 @@
     <script>
         // Configuración de Firebase
         const firebaseConfig = {
-            apiKey: "AIzaSyBtbwtEV54UibTbNI2rLS08xhiR0CquMC0",
-            authDomain: "licoreria-c33d4.firebaseapp.com",
-            projectId: "licoreria-c33d4",
-            storageBucket: "licoreria-c33d4.appspot.com",
-            messagingSenderId: "236261862007",
-            appId: "1:236261862007:web:78f96318a93f483b92b472",
-            measurementId: "G-BW9GSQNXW6"
+            apiKey: "TU_API_KEY",
+            authDomain: "TU_AUTH_DOMAIN",
+            projectId: "TU_PROJECT_ID",
+            storageBucket: "TU_STORAGE_BUCKET",
+            messagingSenderId: "TU_MESSAGING_SENDER_ID",
+            appId: "TU_APP_ID",
+            measurementId: "TU_MEASUREMENT_ID"
         };
         // Inicializar Firebase
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
+        const dbCollection = db.collection("producto");
+
+        let productos = [];
+        let currentIndex = null;
+
+        async function saveProducto() {
+            const productoForm = document.getElementById('productoForm');
+            const nombre = productoForm['nombre'].value;
+            const marca = productoForm['marca'].value;
+            const tipo = productoForm['tipo'].value;
+            const descripcion = productoForm['descripcion'].value;
+            const volumen = parseInt(productoForm['volumen'].value);
+            const grado = parseInt(productoForm['grado'].value);
+            const stock = parseInt(productoForm['stock'].value);
+            const categoria = productoForm['categoria'].value;
+            const valoracion = parseInt(productoForm['valoracion'].value);
+            const precio = parseInt(productoForm['precio'].value);
+
+            const producto = {
+                nombre,
+                marca,
+                tipo,
+                descripcion,
+                volumen,
+                grado,
+                stock,
+                categoria,
+                valoracion,
+                precio
+            };
+
+            if (currentIndex === null) {
+                await dbCollection.add(producto);
+            } else {
+                await dbCollection.doc(productos[currentIndex].id).set(producto);
+                currentIndex = null;
+            }
+
+            productoForm.reset();
+            loadProductos();
+        }
+
+        function loadProductos() {
+            dbCollection.onSnapshot((querySnapshot) => {
+                productos = [];
+                querySnapshot.forEach((doc) => {
+                    productos.push({
+                        id: doc.id,
+                        ...doc.data()
+                    });
+                });
+                renderProductos();
+            });
+        }
+
+        function renderProductos() {
+            const productoTableBody = document.getElementById('productoTableBody');
+            productoTableBody.innerHTML = '';
+            productos.forEach((producto, index) => {
+                const tr = document.createElement('tr');
+                tr.innerHTML = `
+                    <td>${producto.nombre}</td>
+                    <td>${producto.marca}</td>
+                    <td>${producto.tipo}</td>
+                    <td>${producto.descripcion}</td>
+                    <td>${producto.volumen}</td>
+                    <td>${producto.grado}</td>
+                    <td>${producto.stock}</td>
+                    <td>${producto.categoria}</td>
+                    <td>${producto.valoracion}</td>
+                    <td>${producto.precio}</td>
+                    <td>
+                        <button onclick="editProducto(${index})">Editar</button>
+                        <button onclick="deleteProducto('${producto.id}')">Eliminar</button>
+                    </td>
+                `;
+                productoTableBody.appendChild(tr);
+            });
+        }
+
+        function editProducto(index) {
+            const producto = productos[index];
+            const productoForm = document.getElementById('productoForm');
+            productoForm['nombre'].value = producto.nombre;
+            productoForm['marca'].value = producto.marca;
+            productoForm['tipo'].value = producto.tipo;
+            productoForm['descripcion'].value = producto.descripcion;
+            productoForm['volumen'].value = producto.volumen;
+            productoForm['grado'].value = producto.grado;
+            productoForm['stock'].value = producto.stock;
+            productoForm['categoria'].value = producto.categoria;
+            productoForm['valoracion'].value = producto.valoracion;
+            productoForm['precio'].value = producto.precio;
+
+            currentIndex = index;
+        }
+
+        function deleteProducto(id) {
+            dbCollection.doc(id).delete();
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            loadProductos();
+        });
     </script>
 </head>
 <body>
@@ -136,6 +240,7 @@
 
         <button type="button" onclick="saveProducto()">Guardar</button>
     </form>
+
     <h2>EN LISTA</h2>
     <table id="productoTable">
         <thead>
@@ -154,115 +259,14 @@
             </tr>
         </thead>
         <tbody id="productoTableBody">
-            <!-- Filas se añadirán dinámicamente -->
+            <!-- Filas se añadirán dinámicament -->
         </tbody>
     </table>
-    <br><br>
 </main>
 
 <footer>
     <p>&copy; RESERVADO POR ABRAHAM NACIMBA</p>
 </footer>
 
-<script>
-    let productos = [];
-    let currentIndex = null;
-    const dbCollection = db.collection("producto");
-
-    async function saveProducto() {
-        const productoForm = document.getElementById('productoForm');
-        const nombre = productoForm['nombre'].value;
-        const marca = productoForm['marca'].value;
-        const tipo = productoForm['tipo'].value;
-        const descripcion = productoForm['descripcion'].value;
-        const volumen = parseInt(productoForm['volumen'].value);
-        const grado = parseInt(productoForm['grado'].value);
-        const stock = parseInt(productoForm['stock'].value);
-        const categoria = productoForm['categoria'].value;
-        const valoracion = parseInt(productoForm['valoracion'].value);
-        const precio = parseInt(productoForm['precio'].value);
-
-        const producto = {
-            nombre,
-            marca,
-            tipo,
-            descripcion,
-            volumen,
-            grado,
-            stock,
-            categoria,
-            valoracion,
-            precio
-        };
-
-        if (currentIndex === null) {
-            await dbCollection.add(producto);
-        } else {
-            await dbCollection.doc(productos[currentIndex].id).set(producto);
-            currentIndex = null;
-        }
-
-        productoForm.reset();
-        loadProductos();
-    }
-
-    function loadProductos() {
-        dbCollection.onSnapshot((querySnapshot) => {
-            productos = [];
-            querySnapshot.forEach((doc) => {
-                productos.push({
-                    id: doc.id,
-                    ...doc.data()
-                });
-            });
-            renderProductos();
-        });
-    }
-
-    function renderProductos() {
-        const productoTableBody = document.getElementById('productoTableBody');
-        productoTableBody.innerHTML = '';
-        productos.forEach((producto, index) => {
-            const tr = document.createElement('tr');
-            tr.innerHTML = `
-                <td>${producto.nombre}</td>
-                <td>${producto.marca}</td>
-                <td>${producto.tipo}</td>
-                <td>${producto.descripcion}</td>
-                <td>${producto.volumen}</td>
-                <td>${producto.grado}</td>
-                <td>${producto.stock}</td>
-                <td>${producto.categoria}</td>
-                <td>${producto.valoracion}</td>
-                <td>${producto.precio}</td>
-                <td>
-                    <button onclick="editProducto(${index})">Editar</button>
-                    <button onclick="deleteProducto('${producto.id}')">Eliminar</button>
-                </td>
-            `;
-            productoTableBody.appendChild(tr);
-        });
-    }
-
-    function editProducto(index) {
-        const producto = productos[index];
-        const productoForm = document.getElementById('productoForm');
-        productoForm['nombre'].value = producto.nombre;
-        productoForm['marca'].value = producto.marca;
-        productoForm['tipo'].value = producto.tipo;
-        productoForm['descripcion'].value = producto.descripcion;
-        productoForm['volumen'].value = producto.volumen;
-        productoForm['grado'].value = producto.grado;
-        productoForm['stock'].value = producto.stock;
-        productoForm['categoria'].value = producto.categoria;
-        productoForm['valoracion'].value = producto.valoracion;
-        productoForm['precio'].value = producto.precio;
-
-        currentIndex = index;
-    }
-
-    function deleteProducto(id) {
-        dbCollection.doc(id).delete();
-    }
-
-    document.addEventListener('DOMContentLoaded',
+</body>
+</html>
