--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
 <div class="login-container">
     <h2>Login</h2>
     <form id="loginForm">
-        <input type="text" id="username" placeholder="Usuario" required>
+        <input type="email" id="email" placeholder="Correo Electrónico" required>
         <input type="password" id="password" placeholder="Contraseña" required>
         <button type="submit">Login</button>
     </form>
@@ -67,10 +67,15 @@
 
     document.getElementById('loginForm').addEventListener('submit', function(event) {
         event.preventDefault();
-        const username = document.getElementById('username').value;
+        const email = document.getElementById('email').value;
         const password = document.getElementById('password').value;
 
-        auth.signInWithEmailAndPassword(username, password)
+        if (!email.endsWith('@utc.edu.ec')) {
+            alert('Por favor, use un correo institucional válido.');
+            return;
+        }
+
+        auth.signInWithEmailAndPassword(email, password)
             .then((userCredential) => {
                 // Redirigir al usuario a index.html si el login es exitoso
                 window.location.href = 'index.html';
