--- a/login.html
+++ b/login.html
@@ -3,89 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loguearse</title>
+    <title>Iniciar Sesión</title>
     <style>
         body {
+            font-family: Arial, sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            margin: 0;
             background-color: #f0f0f0;
         }
-        .login-container {
-            background-color: #fff;
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             padding: 20px;
+            background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 5px;
         }
-        .login-container h2 {
-            margin-bottom: 20px;
-        }
-        .login-container input {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        .login-container button {
-            width: 100%;
-            padding: 10px;
-            background-color: #007BFF;
-            border: none;
-            border-radius: 5px;
-            color: #fff;
-            font-size: 16px;
+        label, input, button {
+            margin: 5px 0;
         }
     </style>
+    <!-- Incluir Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/9.9.3/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.9.3/firebase-auth-compat.js"></script>
+    <script>
+        // Configuración de Firebase
+        const firebaseConfig = {
+            apiKey: "Tu-API-Key",
+            authDomain: "licoreria-c33d4.firebaseapp.com",
+            projectId: "licoreria-c33d4",
+            storageBucket: "licoreria-c33d4.appspot.com",
+            messagingSenderId: "236261862007",
+            appId: "1:236261862007:web:78f96318a93f483b92b472",
+            measurementId: "G-BW9GSQNXW6"
+        };
+        // Inicializar Firebase
+        firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+
+        function login() {
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+
+            // Validar que el correo tenga el dominio correcto
+            if (!email.endsWith('@utc.edu.ec')) {
+                alert('Debes iniciar sesión con un correo de UTC.');
+                return;
+            }
+
+            // Iniciar sesión
+            auth.signInWithEmailAndPassword(email, password)
+                .then((userCredential) => {
+                    // Usuario inició sesión correctamente
+                    window.location.href = 'index.html';
+                })
+                .catch((error) => {
+                    alert('Usuario o contraseña incorrectos.');
+                    console.error('Error de inicio de sesión:', error);
+                });
+        }
+    </script>
 </head>
 <body>
+    <form>
+        <label for="email">Correo Electrónico:</label>
+        <input type="email" id="email" name="email" required>
 
-<div class="login-container">
-    <h2>Login</h2>
-    <form id="loginForm">
-        <input type="email" id="email" placeholder="Correo Electrónico" required>
-        <input type="password" id="password" placeholder="Contraseña" required>
-        <button type="submit">Login</button>
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" name="password" required>
+
+        <button type="button" onclick="login()">Iniciar Sesión</button>
     </form>
-</div>
-
-<script src="https://www.gstatic.com/firebasejs/9.9.3/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.9.3/firebase-auth-compat.js"></script>
-<script>
-    const firebaseConfig = {
-        apiKey: "AIzaSyBtbwtEV54UibTbNI2rLS08xhiR0CquMC0",
-        authDomain: "licoreria-c33d4.firebaseapp.com",
-        projectId: "licoreria-c33d4",
-        storageBucket: "licoreria-c33d4.appspot.com",
-        messagingSenderId: "236261862007",
-        appId: "1:236261862007:web:78f96318a93f483b92b472",
-        measurementId: "G-BW9GSQNXW6"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-
-    document.getElementById('loginForm').addEventListener('submit', function(event) {
-        event.preventDefault();
-        const email = document.getElementById('email').value;
-        const password = document.getElementById('password').value;
-
-        if (!email.endsWith('@utc.edu.ec')) {
-            alert('Por favor, use un correo institucional válido.');
-            return;
-        }
-
-        auth.signInWithEmailAndPassword(email, password)
-            .then((userCredential) => {
-                // Redirigir al usuario a index.html si el login es exitoso
-                window.location.href = 'index.html';
-            })
-            .catch((error) => {
-                alert('Usuario o contraseña incorrectos');
-                console.error(error.code, error.message);
-            });
-    });
-</script>
-
 </body>
 </html>
