--- a/login.html
+++ b/login.html
@@ -3,93 +3,161 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión</title>
+    <title>Login y Registro</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
+            background-image: url('');
+            background-size: cover;
         }
-        form {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+        .container {
+            background-color: rgba(255, 255, 255, 0.8);
             padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
-        label, input, button {
-            margin: 5px 0;
+        .form-group {
+            position: relative;
+            margin-bottom: 15px;
+        }
+        .form-group input {
+            width: 100%;
+            padding: 10px;
+            box-sizing: border-box;
+        }
+        .form-group label {
+            position: absolute;
+            top: 50%;
+            left: 10px;
+            transform: translateY(-50%);
+            transition: top 0.2s, transform 0.2s;
+            pointer-events: none;
+            opacity: 0.5;
+        }
+        .form-group input:focus + label,
+        .form-group input:not(:placeholder-shown) + label {
+            top: 0;
+            transform: translateY(-100%);
+            opacity: 1;
+        }
+        .btn {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            background-color: #011d3b;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .btn:hover {
+            background-color: #013a74;
         }
     </style>
-    <!-- Incluir Firebase -->
+</head>
+<body>
+    <div class="container" id="login-container">
+        <h2>Iniciar Sesión</h2>
+        <div class="form-group">
+            <input type="email" id="login-email" required placeholder=" ">
+            <label for="login-email">Correo Electrónico</label>
+        </div>
+        <div class="form-group">
+            <input type="password" id="login-password" required placeholder=" ">
+            <label for="login-password">Contraseña</label>
+        </div>
+        <button class="btn" onclick="loginWithEmail()">Iniciar Sesión con Correo</button>
+        <button class="btn" onclick="loginWithGoogle()">Iniciar Sesión con Google</button>
+        <p>¿No tienes una cuenta? <a href="#" onclick="showRegister()">Regístrate</a></p>
+    </div>
+
+    <div class="container" id="register-container" style="display: none;">
+        <h2>Registro</h2>
+        <div class="form-group">
+            <input type="email" id="register-email" required placeholder=" ">
+            <label for="register-email">Correo Electrónico</label>
+        </div>
+        <div class="form-group">
+            <input type="password" id="register-password" required placeholder=" ">
+            <label for="register-password">Contraseña</label>
+        </div>
+        <button class="btn" onclick="register()">Registrarse</button>
+        <p>¿Ya tienes una cuenta? <a href="#" onclick="showLogin()">Inicia Sesión</a></p>
+    </div>
+
+    <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.9.3/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.9.3/firebase-auth-compat.js"></script>
     <script>
         // Configuración de Firebase
         const firebaseConfig = {
-            apiKey: "AIzaSyBtbwtEV54UibTbNI2rLS08xhiR0CquMC0",
-            authDomain: "licoreria-c33d4.firebaseapp.com",
-            projectId: "licoreria-c33d4",
-            storageBucket: "licoreria-c33d4.appspot.com",
-            messagingSenderId: "236261862007",
-            appId: "1:236261862007:web:78f96318a93f483b92b472",
-            measurementId: "G-BW9GSQNXW6"
+        apiKey: "AIzaSyBtbwtEV54UibTbNI2rLS08xhiR0CquMC0",
+        authDomain: "licoreria-c33d4.firebaseapp.com",
+        databaseURL: "https://licoreria-c33d4-default-rtdb.firebaseio.com",
+        projectId: "licoreria-c33d4",
+        storageBucket: "licoreria-c33d4.appspot.com",
+        messagingSenderId: "236261862007",
+        appId: "1:236261862007:web:78f96318a93f483b92b472",
+        measurementId: "G-BW9GSQNXW6"
         };
+
+        
         // Inicializar Firebase
         firebase.initializeApp(firebaseConfig);
-        const auth = firebase.auth();
 
-        function login() {
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
+        // Iniciar sesión con correo electrónico y contraseña
+        function loginWithEmail() {
+            const email = document.getElementById('login-email').value;
+            const password = document.getElementById('login-password').value;
+            firebase.auth().signInWithEmailAndPassword(email, password)
+                .then(() => {
+                    window.location.href = 'index.html';
+                })
+                .catch((error) => {
+                    alert(error.message);
+                });
+        }
 
-            // Validar que el correo tenga el dominio correcto
-            if (!email.endsWith('@utc.edu.ec')) {
-                alert('Debes iniciar sesión con un correo de UTC.');
-                return;
-            }
+        // Iniciar sesión con Google
+        function loginWithGoogle() {
+            const provider = new firebase.auth.GoogleAuthProvider();
+            firebase.auth().signInWithPopup(provider)
+                .then((result) => {
+                    window.location.href = 'index.html';
+                })
+                .catch((error) => {
+                    alert(error.message);
+                });
+        }
 
-            // Validar credenciales específicas
-            if ((email === 'usuario@utc.edu.ec' && password === '123') ||
-                (email === 'admin@utc.edu.ec' && password === '123')) {
-                // Iniciar sesión
-                auth.signInWithEmailAndPassword(email, password)
-                    .then((userCredential) => {
-                        // Usuario inició sesión correctamente
-                        window.location.href = 'index.html';
-                    })
-                    .catch((error) => {
-                        // Manejo de errores de inicio de sesión
-                        if (error.code === 'auth/user-not-found') {
-                            alert('Usuario no encontrado. Verifica tu correo y contraseña.');
-                        } else if (error.code === 'auth/wrong-password') {
-                            alert('Contraseña incorrecta. Verifica tu contraseña.');
-                        } else {
-                            alert('Error al iniciar sesión. Por favor, inténtalo de nuevo más tarde.');
-                            console.error('Error de inicio de sesión:', error);
-                        }
-                    });
-            } else {
-                alert('Credenciales incorrectas.');
-            }
+        // Registrarse
+        function register() {
+            const email = document.getElementById('register-email').value;
+            const password = document.getElementById('register-password').value;
+            firebase.auth().createUserWithEmailAndPassword(email, password)
+                .then(() => {
+                    window.location.href = 'index.html';
+                })
+                .catch((error) => {
+                    alert(error.message);
+                });
+        }
+
+        // Mostrar formularios
+        function showLogin() {
+            document.getElementById('login-container').style.display = 'block';
+            document.getElementById('register-container').style.display = 'none';
+        }
+
+        function showRegister() {
+            document.getElementById('login-container').style.display = 'none';
+            document.getElementById('register-container').style.display = 'block';
         }
     </script>
-</head>
-<body>
-    <form>
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" name="password" required>
-
-        <button type="button" onclick="login()">Iniciar Sesión</button>
-    </form>
 </body>
 </html>
