--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login y Registro</title>
+    <title>Logueo</title>
     <style>
         body {
             margin: 0;
@@ -49,14 +49,14 @@
             display: block;
             width: 100%;
             padding: 10px;
-            background-color: #011d3b;
+            background-color: #3da1b3;
             color: white;
             border: none;
             border-radius: 5px;
             cursor: pointer;
         }
         .btn:hover {
-            background-color: #013a74;
+            background-color: #58899c;
         }
     </style>
 </head>
